[package]
name = "shai"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
async-openai = { version = "0.40", features = ["chat-completion"] }
clap = { version = "4.5", features = ["derive"] }
colored = "3.0"
dialoguer = "0.12"
dirs = "6.0"
serde = { version = "1.0", features = ["derive"] }
toml = "1.1.2"
serde_json = "1.0.150"
